--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -8,12 +8,13 @@
   </head>
   <body>
     <div id="content">
-      <h1>My Portfolio</h1>
-      <p>This is my portfolio.</p>
+      <h1>Fernanda's Portfolio</h1>
+      <p>This is my portfolio. I'm loving every part of Week 1! </p>
       <p>Click <a href="/hello">here</a> to see content created by server code.</p>
-      <p>Click here to get a random message:</p>
-      <button onclick="addRandomGreeting()">Hello</button>
+      <p>Click here to get a random movie quote:</p>
+      <button onclick="addRandomGreeting()">Movie</button>
       <div id="greeting-container"></div>
+      <img src="/images/1.jpg" />
     </div>
   </body>
 </html>
