--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -26,6 +26,13 @@
                   <h1>Me</h1>
               </div>
           </div>
+          <div class="content-section">
+            <h1>About</h1>
+            <h1>Projects</h1>
+            <h1>Gallery</h1>
+            <h1>Me</h1>
+          
+        </div>
       </div>
   </body>
 </html>
