Fix bugbed pathways to images

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -21,13 +21,13 @@
                   <h3>03</h3>
                   <h1>Gallery</h1>
               </div>
-              <div class="column" style="background-image: url(/images/me.jpg);">
+              <div class="column" style="background-image: url(/images/header/me.jpg);">
                   <h3>04</h3>
                   <h1>Me</h1>
               </div>
           </div>
           <div class="content-section">
-            <h1>About</h1>
+              <h1>About</h1>
               <h1>Projects</h1>
               <p>Developed a decentralized voting system over the Ethereum blockchain using smart contracts in Solidity. Microservices architecture built with Node.js, Docker, and IBM Cloud.</p>
               <p>Created a Chrome extension for speed reading utilizing facial recognition to control speed, and play/stop the session. The extension was built with React and Javascript. The ML models use ML5 library to have them web based to ensure fast feedback.</p>
@@ -44,8 +44,7 @@
               <p>Knowledge: Full-stack web development, databases, blockchain.</p>
               <a href="https://www.linkedin.com/in/mfdlg/" target="_blank">Linkedn</a>
               <a href="https://github.com/ferdeleong" target="_blank">Github</a>
-        </div>
+          </div>
       </div>
   </body>
 </html>
-
