Transform home page into a template and fix 80 characters long

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
   </head>
-  <body>
+  <body onload="loadContent()">
       <div id="root">
           <div class="header-section">
               <div class="column" style="background-image: url(/images/header/about.jpg);">
@@ -28,12 +28,18 @@
           </div>
           <div class="content-section">
               <h1>About</h1>
+              <div id="quote"></div>
+              <div id="aboutParagraph"></div>
               <h1>Projects</h1>
+              <div id="project"></div>
               <h1>Gallery</h1>
+              <div id="galleryDescription"></div>
               <h1>Me</h1>
+              <div id="hometown"></div>
               <h3>Education</h3>
+              <div id="school"></div>
+              <div id="degrees"></div>
               <h3>Skills</h3>
-             
               <a href="https://www.linkedin.com/in/mfdlg/" target="_blank">Linkedn</a>
               <a href="https://github.com/ferdeleong" target="_blank">Github</a>
           </div>
