Fix divs and rever servlet change.

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -27,13 +27,15 @@
               </div>
           </div>
           <div class="content-section">
-              <h1>About</h1>
-              <div id="quote"></div>
-              <div id="aboutParagraph"></div>
-              <h1>Projects</h1>
-              <div id="project"></div>
-              <h1>Gallery</h1>
-              <div id="galleryDescription"></div>
+              <div class="middle-section" id="about-section">
+                <h1>About</h1>
+              </div>
+              <div class="middle-section" id="project-section">
+                <h1>Projects</h1>
+              </div>
+              <div class="middle-section" id="gallery-section">
+                <h1>Gallery</h1>
+              </div>
               <h1>Me</h1>
               <div id="hometown"></div>
               <h3>Education</h3>
