Finish me-section and finish week 1

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -35,13 +35,18 @@
               </div>
               <div class="middle-section" id="gallery-section">
                 <h1>Gallery</h1>
+                <div id="gallery-images"></div>
               </div>
-              <h1>Me</h1>
-              <div id="hometown"></div>
-              <h3>Education</h3>
-              <div id="school"></div>
-              <div id="degrees"></div>
-              <h3>Skills</h3>
+              <div class="middle-section" id="me-section">
+                <h1>Me</h1>
+                <h3>Education</h3>
+                <div id="me-hometown"></div>
+                <div id="me-school"></div>
+                <div id="me-degrees"></div>
+                <h3>Skills</h3>
+                <div class="horizontal-list" id="me-languages"></div>
+                <div class="horizontal-list" id="me-knowledge"></div>
+              </div>
               <a href="https://www.linkedin.com/in/mfdlg/" target="_blank">Linkedn</a>
               <a href="https://github.com/ferdeleong" target="_blank">Github</a>
           </div>
