Finish week 2. Step 2 from walkthrough

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -5,6 +5,7 @@
     <title>My Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
+    <script src="queries.js"></script>
   </head>
   <body onload="loadContent()">
       <div id="root">
@@ -50,6 +51,8 @@
               <a href="https://www.linkedin.com/in/mfdlg/" target="_blank">Linkedn</a>
               <a href="https://github.com/ferdeleong" target="_blank">Github</a>
           </div>
+          <div id="random-fact"></div>
+          <button onclick="getHello();">Get Random Fact</button>
       </div>
   </body>
 </html>
