--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -54,6 +54,14 @@
               </div>
               <a href="https://www.linkedin.com/in/mfdlg/" target="_blank">Linkedn</a>
               <a href="https://github.com/ferdeleong" target="_blank">Github</a>
+
+              <form action="/form-handler" method="POST">
+                <p>Enter some text here:</p>
+                <textarea name="text-input" placeholder="Reach out to meet each other!"></textarea>
+                <br/>
+                <input type="submit" />
+              </form>
+
           </div>
       </div>
   </body>
