Add comments as documetation on the code and adapt the text to ask for sentiments

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -56,8 +56,8 @@
               <a href="https://github.com/ferdeleong" target="_blank">Github</a>
 
               <form action="/form-handler" method="POST">
-                <p>Enter some text here:</p>
-                <textarea name="text-input" placeholder="Reach out to meet each other!"></textarea>
+                <p>Do you like my page? Feel free to write any recommendations</p>
+                <textarea name="text-input" placeholder="Hello World!"></textarea>
                 <br/>
                 <input type="submit" />
               </form>
