--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -55,13 +55,12 @@
               <a href="https://www.linkedin.com/in/mfdlg/" target="_blank">Linkedn</a>
               <a href="https://github.com/ferdeleong" target="_blank">Github</a>
 
-              <form action="/form-handler" method="POST">
+              <form action="/sentiment" method="POST">
                 <p>Do you like my page? Feel free to write any recommendations</p>
                 <textarea name="text-input" placeholder="Hello World!"></textarea>
                 <br/>
                 <input type="submit" />
               </form>
-
           </div>
       </div>
   </body>
